// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar Component basic render 1`] = `
<View
  style={
    Array [
      Object {
        "height": 88,
      },
      Object {
        "backgroundColor": "#000",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "marginTop": 44,
        },
        null,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                298.67,
                384,
                2,
                571.73,
                665.6,
                2,
                512,
                725.33,
                2,
                170.67,
                384,
                2,
                512,
                42.67,
                2,
                571.73,
                102.4,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                0,
                0,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                0,
                0,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "zIndex": -1,
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "left": 70,
            "right": 70,
            "width": 610,
          },
        ]
      }
      testID={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "#fff",
              },
              null,
            ],
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                746.67,
                490.67,
                2,
                661.33,
                576,
                2,
                725.33,
                640,
                2,
                768,
                640,
                2,
                810.67,
                597.33,
                2,
                810.67,
                554.6600000000001,
                2,
                746.67,
                490.6700000000001,
                1,
                0,
                298.67,
                128,
                2,
                298.67,
                213.32999999999998,
                2,
                640,
                554.67,
                2,
                725.33,
                469.34,
                2,
                384,
                128,
                2,
                298.67,
                128,
                1,
                0,
                213.33,
                21.33,
                3,
                213.33,
                33.11,
                222.98000000000002,
                42.66,
                234.51000000000002,
                42.66,
                2,
                874.8199999999999,
                42.66,
                3,
                886.52,
                42.66,
                895.9999999999999,
                32.76,
                895.9999999999999,
                21.33,
                3,
                895.9999999999999,
                9.549999999999999,
                886.3499999999999,
                0,
                874.8199999999999,
                0,
                2,
                234.51,
                0,
                3,
                222.82,
                0,
                213.32999999999998,
                9.9,
                213.32999999999998,
                21.33,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                0,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                0,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
  </View>
</View>
`;

exports[`TopBar Component render gradient 1`] = `
<View
  style={
    Array [
      Object {
        "height": 88,
      },
      false,
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "flex": 1,
          "height": 1334,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        },
        Object {
          "height": 88,
          "width": 750,
        },
      ]
    }
  >
    <RNSVGSvgView
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
          false,
          Object {
            "flex": 0,
            "height": 88,
            "width": 750,
          },
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            Array [
              1,
              0,
              0,
              1,
              1,
              1,
              0,
              1,
              0,
              1,
            ]
          }
          gradientTransform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          gradientUnits={0}
          name="Gradient"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          Array [
            1,
            "Gradient",
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height="88"
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "fill",
          ]
        }
        rx="0"
        ry="0"
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={null}
        width="750"
        x="0"
        y="0"
      />
    </RNSVGSvgView>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "marginTop": 44,
        },
        null,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                298.67,
                384,
                2,
                571.73,
                665.6,
                2,
                512,
                725.33,
                2,
                170.67,
                384,
                2,
                512,
                42.67,
                2,
                571.73,
                102.4,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "zIndex": -1,
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "left": 70,
            "right": 70,
            "width": 610,
          },
        ]
      }
      testID={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "#fff",
              },
              null,
            ],
          ]
        }
      >
        Title
      </Text>
    </View>
  </View>
</View>
`;

exports[`TopBar Component render gradient 2`] = `
<View
  style={
    Array [
      Object {
        "height": 88,
      },
      false,
      Object {
        "marginTop": 24,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "flex": 1,
          "height": 1334,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        },
        Object {
          "height": 88,
          "width": 750,
        },
      ]
    }
  >
    <RNSVGSvgView
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "bottom": 0,
              "flex": 1,
              "height": 1334,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            },
            Object {
              "height": 88,
              "width": 750,
            },
          ],
          false,
          Object {
            "flex": 0,
            "height": 88,
            "width": 750,
          },
        ]
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            Array [
              1,
              1,
              0,
              1,
              0,
              0,
              1,
              1,
              0,
              1,
            ]
          }
          gradientTransform={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          gradientUnits={1}
          name="grad"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          Array [
            1,
            "grad",
          ]
        }
        fillOpacity={1}
        fillRule={1}
        height="88"
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        propList={
          Array [
            "fill",
          ]
        }
        rx="0"
        ry="0"
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={null}
        width="750"
        x="0"
        y="0"
      />
    </RNSVGSvgView>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "marginTop": 44,
        },
        null,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                298.67,
                384,
                2,
                571.73,
                665.6,
                2,
                512,
                725.33,
                2,
                170.67,
                384,
                2,
                512,
                42.67,
                2,
                571.73,
                102.4,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "zIndex": -1,
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "left": 70,
            "right": 70,
            "width": 610,
          },
        ]
      }
      testID={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "#fff",
              },
              null,
            ],
          ]
        }
      >
        Title
      </Text>
    </View>
  </View>
</View>
`;

exports[`TopBar Component render multiple actions 1`] = `
<View
  style={
    Array [
      Object {
        "height": 88,
      },
      Object {
        "backgroundColor": "blue",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "marginTop": 44,
        },
        null,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                298.67,
                384,
                2,
                571.73,
                665.6,
                2,
                512,
                725.33,
                2,
                170.67,
                384,
                2,
                512,
                42.67,
                2,
                571.73,
                102.4,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={null}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 50,
          "opacity": 1,
          "position": "absolute",
          "width": 50,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "red",
              },
              null,
            ],
          ]
        }
      >
        定时
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "zIndex": -1,
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "left": 150,
            "right": 150,
            "width": 450,
          },
        ]
      }
      testID={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "#fff",
              },
              null,
            ],
          ]
        }
      >
        Very Very Very Very Very Long Title
      </Text>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 12,
              },
              Object {
                "color": "rgba(255, 255, 255, 0.6)",
              },
              null,
            ],
          ]
        }
      >
        SubTitle
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                467.435,
                429.325,
                2,
                109.13400000000001,
                429.325,
                3,
                85.13000000000001,
                429.325,
                64.75900000000001,
                409.293,
                64.75900000000001,
                384.58299999999997,
                3,
                64.75900000000001,
                359.7,
                84.62600000000002,
                339.84099999999995,
                109.13400000000001,
                339.84099999999995,
                2,
                467.435,
                339.84099999999995,
                2,
                467.435,
                -18.460000000000036,
                3,
                467.435,
                -42.46400000000004,
                487.466,
                -62.835000000000036,
                512.177,
                -62.835000000000036,
                3,
                537.0600000000001,
                -62.835000000000036,
                556.919,
                -42.96800000000003,
                556.919,
                -18.460000000000036,
                2,
                556.919,
                339.84099999999995,
                2,
                915.22,
                339.84099999999995,
                3,
                939.224,
                339.84099999999995,
                959.595,
                359.87199999999996,
                959.595,
                384.58299999999997,
                3,
                959.595,
                409.46599999999995,
                939.7280000000001,
                429.325,
                915.22,
                429.325,
                2,
                556.918,
                429.325,
                2,
                556.918,
                787.626,
                3,
                556.918,
                811.63,
                536.886,
                832.001,
                512.176,
                832.001,
                3,
                487.29300000000006,
                832.001,
                467.434,
                812.134,
                467.434,
                787.626,
                2,
                467.434,
                429.325,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 50,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                543.999,
                320.024,
                2,
                480.00100000000003,
                320.024,
                2,
                480.00100000000003,
                608.012,
                2,
                543.999,
                608.012,
                2,
                543.999,
                320.02399999999994,
                1,
                0,
                543.999,
                192.03,
                2,
                480.00100000000003,
                192.03,
                2,
                480.00100000000003,
                256.028,
                2,
                543.999,
                256.028,
                2,
                543.999,
                192.03000000000003,
                1,
                0,
                512,
                768.006,
                3,
                300.80899999999997,
                768.006,
                128.01600000000002,
                595.2139999999999,
                128.01600000000002,
                384.022,
                3,
                128.01600000000002,
                172.83000000000004,
                300.808,
                0.038000000000010914,
                512,
                0.038000000000010914,
                3,
                723.192,
                0.038000000000010914,
                895.9839999999999,
                172.83,
                895.9839999999999,
                384.022,
                3,
                895.9839999999999,
                595.2139999999999,
                723.1909999999999,
                768.006,
                511.99999999999994,
                768.006,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 100,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                859.4,
                585.1,
                2,
                896,
                621.7,
                2,
                896,
                658.3000000000001,
                2,
                859.4,
                694.9000000000001,
                2,
                822.8,
                694.9000000000001,
                2,
                786.1999999999999,
                658.3000000000001,
                2,
                859.4,
                585.1,
                1,
                0,
                457.1,
                256,
                2,
                530.2,
                256,
                2,
                822.8000000000001,
                548.6,
                2,
                804.5000000000001,
                566.9,
                2,
                768.0000000000001,
                603.4,
                2,
                749.7000000000002,
                621.6999999999999,
                2,
                457.10000000000014,
                329.0999999999999,
                2,
                457.10000000000014,
                256,
                1,
                0,
                402.3,
                201.1,
                2,
                402.3,
                347.4,
                2,
                804.6,
                749.7,
                2,
                877.7,
                749.7,
                2,
                950.8000000000001,
                676.6,
                2,
                950.8000000000001,
                603.5,
                2,
                548.6,
                201.1,
                2,
                402.3,
                201.1,
                1,
                0,
                73.1,
                237.7,
                3,
                73.1,
                257.9,
                89.89999999999999,
                274.3,
                109.8,
                274.3,
                2,
                292.4,
                274.3,
                3,
                312.7,
                274.3,
                329.09999999999997,
                257.3,
                329.09999999999997,
                237.70000000000002,
                3,
                329.09999999999997,
                217.50000000000003,
                312.29999999999995,
                201.10000000000002,
                292.4,
                201.10000000000002,
                2,
                109.8,
                201.10000000000002,
                3,
                89.6,
                201.10000000000002,
                73.1,
                218.10000000000002,
                73.1,
                237.70000000000002,
                1,
                0,
                73.1,
                54.89999999999998,
                3,
                73.1,
                75.09999999999998,
                89.8,
                91.49999999999997,
                110.39999999999999,
                91.49999999999997,
                2,
                767.3,
                91.49999999999997,
                3,
                787.9,
                91.49999999999997,
                804.5999999999999,
                74.49999999999997,
                804.5999999999999,
                54.89999999999997,
                3,
                804.5999999999999,
                34.699999999999974,
                787.8999999999999,
                18.29999999999997,
                767.3,
                18.29999999999997,
                2,
                110.4,
                18.29999999999997,
                3,
                89.80000000000001,
                18.29999999999997,
                73.10000000000001,
                35.29999999999997,
                73.10000000000001,
                54.89999999999997,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
  </View>
</View>
`;

exports[`TopBar Component render multiple actions 2`] = `
<View
  style={
    Array [
      Object {
        "height": 88,
      },
      Object {
        "backgroundColor": "blue",
      },
      Object {
        "marginTop": 24,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "space-between",
          "marginTop": 44,
        },
        null,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 0,
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                298.67,
                384,
                2,
                571.73,
                665.6,
                2,
                512,
                725.33,
                2,
                170.67,
                384,
                2,
                512,
                42.67,
                2,
                571.73,
                102.4,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={null}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "left": 50,
          "opacity": 1,
          "position": "absolute",
          "width": 50,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "red",
              },
              null,
            ],
          ]
        }
      >
        定时
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "height": "100%",
            "justifyContent": "center",
            "position": "absolute",
            "zIndex": -1,
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "left": 150,
            "right": 150,
            "width": 450,
          },
        ]
      }
      testID={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#fff",
                "fontSize": 16,
              },
              Object {
                "color": "#fff",
              },
              null,
            ],
          ]
        }
      >
        Very Very Very Very Very Long Title
      </Text>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "rgba(255, 255, 255, 0.6)",
                "fontSize": 12,
              },
              Object {
                "color": "rgba(255, 255, 255, 0.6)",
              },
              null,
            ],
          ]
        }
      >
        SubTitle
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                467.435,
                429.325,
                2,
                109.13400000000001,
                429.325,
                3,
                85.13000000000001,
                429.325,
                64.75900000000001,
                409.293,
                64.75900000000001,
                384.58299999999997,
                3,
                64.75900000000001,
                359.7,
                84.62600000000002,
                339.84099999999995,
                109.13400000000001,
                339.84099999999995,
                2,
                467.435,
                339.84099999999995,
                2,
                467.435,
                -18.460000000000036,
                3,
                467.435,
                -42.46400000000004,
                487.466,
                -62.835000000000036,
                512.177,
                -62.835000000000036,
                3,
                537.0600000000001,
                -62.835000000000036,
                556.919,
                -42.96800000000003,
                556.919,
                -18.460000000000036,
                2,
                556.919,
                339.84099999999995,
                2,
                915.22,
                339.84099999999995,
                3,
                939.224,
                339.84099999999995,
                959.595,
                359.87199999999996,
                959.595,
                384.58299999999997,
                3,
                959.595,
                409.46599999999995,
                939.7280000000001,
                429.325,
                915.22,
                429.325,
                2,
                556.918,
                429.325,
                2,
                556.918,
                787.626,
                3,
                556.918,
                811.63,
                536.886,
                832.001,
                512.176,
                832.001,
                3,
                487.29300000000006,
                832.001,
                467.434,
                812.134,
                467.434,
                787.626,
                2,
                467.434,
                429.325,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 50,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                543.999,
                320.024,
                2,
                480.00100000000003,
                320.024,
                2,
                480.00100000000003,
                608.012,
                2,
                543.999,
                608.012,
                2,
                543.999,
                320.02399999999994,
                1,
                0,
                543.999,
                192.03,
                2,
                480.00100000000003,
                192.03,
                2,
                480.00100000000003,
                256.028,
                2,
                543.999,
                256.028,
                2,
                543.999,
                192.03000000000003,
                1,
                0,
                512,
                768.006,
                3,
                300.80899999999997,
                768.006,
                128.01600000000002,
                595.2139999999999,
                128.01600000000002,
                384.022,
                3,
                128.01600000000002,
                172.83000000000004,
                300.808,
                0.038000000000010914,
                512,
                0.038000000000010914,
                3,
                723.192,
                0.038000000000010914,
                895.9839999999999,
                172.83,
                895.9839999999999,
                384.022,
                3,
                895.9839999999999,
                595.2139999999999,
                723.1909999999999,
                768.006,
                511.99999999999994,
                768.006,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "marginHorizontal": 12,
          "opacity": 1,
          "position": "absolute",
          "right": 100,
          "width": 26,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <ARTSurfaceView
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
              ],
              Object {
                "height": 26,
                "width": 26,
              },
            ]
          }
        >
          <ARTShape
            d={
              Array [
                0,
                859.4,
                585.1,
                2,
                896,
                621.7,
                2,
                896,
                658.3000000000001,
                2,
                859.4,
                694.9000000000001,
                2,
                822.8,
                694.9000000000001,
                2,
                786.1999999999999,
                658.3000000000001,
                2,
                859.4,
                585.1,
                1,
                0,
                457.1,
                256,
                2,
                530.2,
                256,
                2,
                822.8000000000001,
                548.6,
                2,
                804.5000000000001,
                566.9,
                2,
                768.0000000000001,
                603.4,
                2,
                749.7000000000002,
                621.6999999999999,
                2,
                457.10000000000014,
                329.0999999999999,
                2,
                457.10000000000014,
                256,
                1,
                0,
                402.3,
                201.1,
                2,
                402.3,
                347.4,
                2,
                804.6,
                749.7,
                2,
                877.7,
                749.7,
                2,
                950.8000000000001,
                676.6,
                2,
                950.8000000000001,
                603.5,
                2,
                548.6,
                201.1,
                2,
                402.3,
                201.1,
                1,
                0,
                73.1,
                237.7,
                3,
                73.1,
                257.9,
                89.89999999999999,
                274.3,
                109.8,
                274.3,
                2,
                292.4,
                274.3,
                3,
                312.7,
                274.3,
                329.09999999999997,
                257.3,
                329.09999999999997,
                237.70000000000002,
                3,
                329.09999999999997,
                217.50000000000003,
                312.29999999999995,
                201.10000000000002,
                292.4,
                201.10000000000002,
                2,
                109.8,
                201.10000000000002,
                3,
                89.6,
                201.10000000000002,
                73.1,
                218.10000000000002,
                73.1,
                237.70000000000002,
                1,
                0,
                73.1,
                54.89999999999998,
                3,
                73.1,
                75.09999999999998,
                89.8,
                91.49999999999997,
                110.39999999999999,
                91.49999999999997,
                2,
                767.3,
                91.49999999999997,
                3,
                787.9,
                91.49999999999997,
                804.5999999999999,
                74.49999999999997,
                804.5999999999999,
                54.89999999999997,
                3,
                804.5999999999999,
                34.699999999999974,
                787.8999999999999,
                18.29999999999997,
                767.3,
                18.29999999999997,
                2,
                110.4,
                18.29999999999997,
                3,
                89.80000000000001,
                18.29999999999997,
                73.10000000000001,
                35.29999999999997,
                73.10000000000001,
                54.89999999999997,
                1,
              ]
            }
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            opacity={1}
            stroke={
              Array [
                1,
                1,
                1,
                1,
              ]
            }
            strokeCap={1}
            strokeDash={
              Array [
                0,
                0,
              ]
            }
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                0.025390625,
                0,
                0,
                -0.025390625,
                0,
                22.75,
              ]
            }
          />
        </ARTSurfaceView>
      </View>
    </View>
  </View>
</View>
`;
